--- a/index (29-10-19).html
+++ b/index (29-10-19).html
@@ -20,6 +20,15 @@
 
         var a = 1;
 
+        // for (assigning variable; condition ; increament) {
+
+        // }
+
+
+        for(var i = 0; i < arr1.length; i++){
+          document.write( arr1[i] +" <br />");
+        }
+        
         var marks = [20,50,60,70];
         var pass = [];
         var fail = [];
